--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "PapyElGringo",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^9.4.0",
