--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "koa": "^2.13.0",
-    "koa-body": "^4.2.0",
-    "koa-router": "^9.4.0",
-    "mongoose": "^5.10.5"
+    "cron": "^2.1.0",
+    "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
+    "koa-router": "^12.0.0",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
+    "@types/cron": "^2.0.0",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
